[issue] #42 Navigating the pages of the slides via thumbnail array (#72)
* Generating thumbnails when a new slide is created or modified

* horizontal scroll carousel

* Adding endpoint to get thumbnail

* Use scrollbar for carousel
update pdf-image.js to modern JavaScript

* Fix a null pointer bug in centerCarousel

* Add switch for display carousel

--- a/v2/client/src/components/AppBar.scss
+++ b/v2/client/src/components/AppBar.scss
@@ -58,6 +58,18 @@
 				text-decoration: none;
 				display: block;
 				text-align: left;
+
+				.MuiSwitch-root {
+					.Mui-checked {
+						color: $primary;
+					}
+					.Mui-checked + .MuiSwitch-track {
+						background-color: $primaryLight;
+					}
+					.Mui-checked:hover {
+						background-color: $primaryShadow;
+					}
+				}
 			}
 
 			.clickable {
